# trezu

./: CLAUDE.md  render.yaml
nt-be/: .env.example  Cargo.toml
nt-be/.sqlx/: query-0d0919b0bc0e734a5155a2766337c005bf863105549661b4889b74dc6e60c181.json  query-36567cc2245450fcf3089d57db17d3c4a7fc68b261d3081a18728b80eb0142a9.json  query-3abe05be828d94bd877028f9c5c269ec479c5a5b9dc94a1d1cf254236e6b7382.json  query-3eb239014126a32c3fb4793277485fd23afb943625065102af61fd7432bbfb52.json  query-498093aafc01d2c8e39728c8edb132571cb34e99964883c0bf99eae3fdbe06f6.json  query-5157c5221880c9e9294a770d1f824cd02585d6dd9c7565854dcbb65264619150.json  query-524f5c15971b2c64a3ca0d0d77d2da4851cda03abb07d5c68e9c153e9c9e6eae.json  query-54bc7592770abfc8102756e4ab50ad141ba7bc7b2c77988ebb885fc7b1f3dba0.json  query-5b469bac56313dff825af3baece66d4bb1d10b7a96bff231de3a0e2681c1250f.json  query-5ed8bc06da9ce597c60d38747ea8ff7b7d22fceafb9451c9cec222ea763980cb.json  query-5f205588489df021222df4247d494a6ad21c0216728876d457954378fcaca1a3.json  query-64ae73085099cad80f4ccceff7e92b19a5a1a961a01db992b1e8180a89597cee.json  query-a999e96f58c9e0f5e0af26d859955ac7c5d65094b52d2944d2551eb735d4861d.json  query-c4ca04959ebcabe05906cb706c1447e28e7bcc66b1119d99f76257b04d6b73ac.json  query-cd3f2b43da3ac6d41f60ae0272d1e2ca381c8852e3511099135bb4678a5c866c.json  query-e648a256a6492374d9c39511c1ecc63a03f5d653bd018e8a2d90b2951c09081c.json  query-e73e4466681ac8412bf33988bfd02272213a24200ffd73a7177946a8b8248aec.json  query-f0909d35187099eca523e0e0a0be2547de92116765a206e148e3a80968c975c2.json  query-fd881f5e05e9494b1ca87f66d411ed04133e0d66df5d949b10f5eb78b0676c37.json
nt-be/data/: tokens.json
nt-be/migrations/: 20260521000001_version_terms_acceptance.sql  20260619000001_create_proposal_templates.sql  20260625000000_add_confidential_snapshot_usd_values.sql  20260625000001_create_nocodb_analytics_views.sql  20260627000001_add_custom_requests_enabled.sql  20260627000002_add_pinned_to_proposal_templates.sql
nt-be/src/: app_state.rs  lib.rs  main.rs  observability.rs
nt-be/src/auth/: error.rs  handlers.rs  middleware.rs  mod.rs  resolve_auth.rs
nt-be/src/constants/: intents_chains.rs  intents_tokens.rs  mod.rs
nt-be/src/handlers/: address_book.rs  mod.rs  proposal_templates.rs
nt-be/src/handlers/balance_changes/: account_monitor.rs  binary_search.rs  completeness.rs  confidential_enrichment.rs  confidential_monitor.rs  counterparty.rs  counterparty_correction.rs  gap_filler.rs  goldsky_enrichment.rs  history.rs  query_builder.rs  staking_rewards.rs  swap_detector.rs  utils.rs
nt-be/src/handlers/bulkpayment/: storage_credits.rs  submit.rs  transactions.rs  worker.rs
nt-be/src/handlers/dao/: mod.rs
nt-be/src/handlers/intents/: bridge_tokens.rs  deposit_address.rs  quote.rs  swap_status.rs  system_status.rs
nt-be/src/handlers/notifications/: detector.rs  mod.rs  payload_decoder.rs  telegram_dispatcher.rs
nt-be/src/handlers/proposals/: get_proposals.rs  scraper.rs  tx.rs
nt-be/src/handlers/relay/: access.rs  confidential.rs  mod.rs  storage_deposit.rs  submit.rs
nt-be/src/routes/: balance_changes.rs  mod.rs  monitored_accounts.rs
nt-be/src/services/: coingecko.rs  defillama.rs  ft_lockup_scheduler.rs  monitored_accounts.rs  platform_metrics.rs  price_lookup.rs  price_provider.rs  price_sync.rs  public_dashboard.rs  sponsor_alerts.rs  usd_value_backfill.rs
nt-be/src/utils/: telegram.rs  test_utils.rs
nt-be/tests/: goldsky_e2e_test.rs  near_deposit_counterparty_test.rs  wnear_swap_deposit_test.rs
nt-cli/: Cargo.toml
nt-cli/src/: api.rs  types.rs
nt-cli/src/auth/: mod.rs
nt-cli/src/payments/: mod.rs
nt-cli/src/requests/: mod.rs
nt-fe/: proxy.ts  (+2 more)
(+227 files in other folders)
