[package]
name = "nt-be"
version = "0.1.0"
edition = "2024"
default-run = "nt-be"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
near-api = "0.8"
near-account-id = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
serde_with = { version = "3.16.1", features = ["base64"] }
chrono = "0.4"
futures = "0.3"
async-stream = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "bigdecimal",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sentry = { version = "0.48", features = ["tracing", "tower", "tower-http", "tower-axum-matched-path"] }
near-jsonrpc-client = "0.20.0"
near-jsonrpc-primitives = "0.34"
near-primitives = "0.34.3"
near-openapi-types = "0.7.0"
once_cell = "1.21.3"
regex = "1.11"
borsh = "1.5.7"
rust_xlsxwriter = "0.92.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
rand = "0.9"
time = "0.3"
urlencoding = "2.1.3"
near-crypto = "0.34"
bs58 = "0.5"
url = "2"
teloxide = { version = "0.17.0", features = ["rustls"], default-features = false }

[[bin]]
name = "rpc_cache_proxy"
path = "src/bin/rpc_cache_proxy.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2"
wiremock = "0.6"
regex = "1.11"
hmac = "0.12"

[patch.crates-io]
near-api = { git = "https://github.com/near/near-api-rs", rev = "e95fdc294ea1fb6a46f9c21bb2a6a7f74e6cd5f9" }
