[package]
name = "trezu-cli"
version = "0.1.1"
edition = "2024"
resolver = "3"
description = "Manage your Confidential Multichain Multisig (Trezu) assets from CLI"
authors = ["NEAR Dev <hello@near.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://trezu.org"
repository = "https://github.com/NEAR-DevHub/trezu"

[package.metadata.wix]
upgrade-guid = "E2C9D2B6-3251-4DB8-8DB3-E0C97C159F8A"
path-guid = "B52D3045-F923-4ED9-972F-5DA657A7915A"
license = false
eula = false

[[bin]]
name = "trezu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
interactive-clap = "0.3"
interactive-clap-derive = "0.3"
inquire = "0.9.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "cookies", "blocking"] }
color-eyre = "0.6"
shell-words = "1.0.0"
prettytable = "0.10.0"

near-crypto = "0.35"
rand = "0.8"
near-primitives = "0.35"
near-cli-rs = { version = "0.26", default-features = false }

dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
near-token = "0.3"
uuid = { version = "1", features = ["serde"] }
colored = "3"
tracing = "0.1"
tracing-indicatif = "0.3.6"
tempfile = "3.27.0"

[features]
default = ["ledger"]
ledger = ["near-cli-rs/ledger"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
